Update index.html. Add script.js, and insert the script into script.js

--- a/index.html
+++ b/index.html
@@ -1,95 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>QRリーダー(プロトタイプ)</title>
-  <script src="./jsQR.js"></script>
-  <script src="./sql.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>QRリーダー(プロトタイプ)</title>
+    <script src="./jsQR.js"></script> 
+    <script src="./sql.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>来場者統計システム</h1>
-  <a id="githubLink" href="https://github.com/TsukasaTakahashi-z8/shibafes2023QR">Source Code on Github</a>
+    <div id="particles-js"></div>
+    <h1>来場者統計システム</h1>
+    <a id="githubLink" href="https://github.com/TsukasaTakahashi-z8/shibafes2023QR">Source Code on Github</a>
 
-  <div id="loadingMessage">🎥 カメラのアクセスが許可されていません。<br> (このサイトのカメラへのアクセスを許可してください。)</div>
-  <canvas id="canvas" hidden></canvas>
-  <div id="output" hidden>
-    <div id="outputMessage">QRコードをかざしてください。</div>
-    <div hidden><span id="outputDate">Data:</span>&emsp; <span id="outputData"></span></div>
-  </div>
-  <script>
-    var video = document.createElement("video");
-    var canvasElement = document.getElementById("canvas");
-    var canvas = canvasElement.getContext("2d");
-    var loadingMessage = document.getElementById("loadingMessage");
-    var outputContainer = document.getElementById("output");
-    var outputMessage = document.getElementById("outputMessage");
-    var outputData = document.getElementById("outputData");
-    var previousData = "";
-
-    function saveData(codeData) {
-      if (previousData != codeData) {
-        var date = new Date();
-        var now = date.toLocaleString();
-        outputDate.innerText = now;
-        addQueue(codeData);
-        previousData = codeData;
-        console.log(now + " ： " +codeData)
-      }
-      return codeData;
-    }
-
-    function drawLine(begin, end, color) {
-      canvas.beginPath();
-      canvas.moveTo(begin.x, begin.y);
-      canvas.lineTo(end.x, end.y);
-      canvas.lineWidth = 4;
-      canvas.strokeStyle = color;
-      canvas.stroke();
-    }
-
-    // Use facingMode: environment to attemt to get the front camera on phones
-    navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(function(stream) {
-      video.srcObject = stream;
-      video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
-      video.play();
-      requestAnimationFrame(tick);
-    });
-
-    function tick() {
-      loadingMessage.innerText = "⌛ Loading video..."
-      if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        loadingMessage.hidden = true;
-        canvasElement.hidden = false;
-        outputContainer.hidden = false;
-
-        canvasElement.height = video.videoHeight;
-        canvasElement.width = video.videoWidth;
-        canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-        var imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-        var code = jsQR(imageData.data, imageData.width, imageData.height, {
-          inversionAttempts: "dontInvert",
-        });
-        if (code) {
-          drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-          drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-          drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-          drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
-          outputMessage.hidden = true;
-          outputData.parentElement.hidden = false;
-
-          // 取得したデータを保存
-          outputData.innerText = saveData(code.data);
-          
-
-        } else {
-          outputMessage.hidden = false;
-          outputData.parentElement.hidden = true;
-        }
-      }
-      requestAnimationFrame(tick);
-    }
-  </script>
+    <div id="loadingMessage">🎥 カメラのアクセスが許可されていません。<br> (このサイトのカメラへのアクセスを許可してください。)<br>許可をしてもこの表示が出る場合は、他のアプリケーションでカメラが使用されていないか、確認してください。</div>
+    <canvas id="canvas" hidden></canvas>
+    <div id="output" hidden>
+        <div id="outputMessage">QRコードをかざしてください。</div>
+        <div hidden><span id="outputDate">Data:</span>&emsp; <span id="outputData"></span></div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
